--- a/src/components/app/FullscreenCenter/FullscreenCenter.css
+++ b/src/components/app/FullscreenCenter/FullscreenCenter.css
@@ -1,10 +1,7 @@
-.Background {
-    background-color: #292a2d;
+.FullscreenCenter {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: #a9a9b3;
 }
